@@ -3,6 +3,7 @@ import QtQuick.Controls 2.3
 import QtQuick.Layouts 1.15
 import org.kde.plasma.core 2.0 as PlasmaCore
 import org.kde.plasma.plasmoid 2.0
+import "./../logic"
 
 Item {
     id: main
@@ -53,6 +54,10 @@ Item {
     MpdState {
         id: mpdState
         scriptRoot: plasmoid.file('', 'scripts/')
+    }
+
+    VolumeState {
+        id: volumeState
     }
 
     // Widget shown on desktop
