@@ -1,3 +1,7 @@
+# next
+
+- That smooth moving volume slider. You don't need it. But you want it. You … *deserve* it! It's **yours** now. - But it's a filthy little liar. I'm telling you. Deceiving us all! Don't trust it.
+
 # 5.3
 
 - Increases cursor visibility on currently paying item
